--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Starbucks Coffee Company</title>
-        <!-- fontawesome -->
+
+        <!-- font awesome -->
         <script src="https://kit.fontawesome.com/3115b3f4f1.js"></script>
+
         <!-- favicon -->
         <link
             rel="apple-touch-icon"
@@ -116,16 +118,14 @@
                         </li>
                     </ul>
                     <div class="location_login">
-                        <div class="loca">
+                        <div class="local">
                             <div class="icon">
                                 <i class="fa-solid fa-location-dot"></i>
                             </div>
                             <div class="desc">Find a store</div>
                         </div>
-                        <div class="button">
-                            <a href="#!" class="btn btn1">Sign in</a>
-                            <a href="#!" class="btn btn2">Join now</a>
-                        </div>
+                        <a href="#!" class="btn btn1">Sign in</a>
+                        <a href="#!" class="btn">Join now</a>
                     </div>
                 </div>
             </div>
@@ -137,10 +137,7 @@
                 <div class="content">
                     <div class="noidung">
                         <div class="info">
-                            <div class="sub-title">
-                                Find your <br />
-                                adventure
-                            </div>
+                            <div class="sub-title">Find your adventure</div>
                             <div class="desc">
                                 Starbucks® Summer Game is here! Play for your
                                 chance to win—more than 10 million prizes are up
@@ -166,7 +163,7 @@
                         </div>
                         <div class="info-2">
                             <div class="sub-title-2">
-                                Macadamia just <br />dropped
+                                Macadamia just dropped
                             </div>
                             <div class="desc-2">
                                 Introducing the White Chocolate Macadamia Cream
@@ -440,7 +437,9 @@
                             <a href="#!">Term of Use</a>
                         </li>
                         <li>
-                            <a href="#!">Do not Share My Personal Information</a>
+                            <a href="#!"
+                                >Do not Share My Personal Information</a
+                            >
                         </li>
                         <li>
                             <a href="#!">CA supply Chain Act</a>
@@ -451,7 +450,9 @@
                     </ul>
                 </div>
 
-                <div class="desc">© 2023 Starbucks Coffee Company. All rights reserved.</div>
+                <div class="desc">
+                    © 2023 Starbucks Coffee Company. All rights reserved.
+                </div>
             </div>
         </div>
     </body>
