fix chieu rong man hinh

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <!-- body - 1 -->
             <div class="body">
                 <div class="content">
-                    <div class="noidung">
+                    <div class="block-1">
                         <div class="info">
                             <div class="sub-title">Find your adventure</div>
                             <div class="desc">
@@ -157,7 +157,7 @@
             <!-- body-2 -->
             <div class="body">
                 <div class="content">
-                    <div class="noidung-2">
+                    <div class="block-2">
                         <div class="img-info-2">
                             <img src="./assets/img/hinh2.jpg" alt="" />
                         </div>
@@ -180,7 +180,7 @@
             <!-- body-3 -->
             <div class="body">
                 <div class="content">
-                    <div class="noidung-3">
+                    <div class="block-3">
                         <div class="info-3">
                             <div class="sub-title-3">For your enjoy-mint</div>
                             <div class="desc-3">
@@ -201,7 +201,7 @@
             <!-- body-4 -->
             <div class="body">
                 <div class="content">
-                    <div class="noidung-4">
+                    <div class="block-4">
                         <div class="img-info-4">
                             <img src="./assets/img/hinh4.jpg" alt="" />
                         </div>
@@ -222,7 +222,7 @@
             <!-- body 5 -->
             <div class="body">
                 <div class="content">
-                    <div class="noidung-5">
+                    <div class="block-5">
                         <div class="info-5">
                             <div class="sub-title-5">
                                 Gift cards give you more in the app
@@ -246,7 +246,7 @@
             <!-- body 6 -->
             <div class="body">
                 <div class="content">
-                    <div class="noidung-6">
+                    <div class="block-6">
                         <div class="img-info-6">
                             <img src="./assets/img/hinh6.jpg" alt="" />
                         </div>
