fix thanh header

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <header class="header">
             <div class="content">
                 <div class="navbar">
-                    <a href="#!" class="logo">
+                    <a href="#home" class="logo">
                         <img
                             src="./assets/img/1200px-Starbucks_Corporation_Logo_2011.svg.png"
                             alt="starbucks"
@@ -135,7 +135,7 @@
             <!-- body - 1 -->
             <div class="body">
                 <div class="content">
-                    <div class="block-1">
+                    <div class="block-1" id="home">
                         <div class="info">
                             <div class="sub-title">Find your adventure</div>
                             <div class="desc">
