--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                             </div>
                             <div class="desc">Find a store</div>
                         </div>
-                        <a href="#!" class="btn btn1">Sign in</a>
-                        <a href="#!" class="btn">Join now</a>
+                        <a href="#!" class="btn-header btn1">Sign in</a>
+                        <a href="#!" class="btn-header">Join now</a>
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                                 for grabs!*
                             </div>
                             <div>
-                                <a href="#!" class="link">Play now</a>
+                                <a href="#!" class="btn">Play now</a>
                             </div>
                         </div>
                         <div class="img-info">
@@ -170,7 +170,7 @@
                                 Cold Brew with toasted cookie crumbles.
                             </div>
                             <div>
-                                <a href="#!" class="link-2">Order now</a>
+                                <a href="#!" class="btn btn-2">Order now</a>
                             </div>
                         </div>
                     </div>
@@ -188,7 +188,7 @@
                                 Java Mint Frappuccino® blended beverage.
                             </div>
                             <div>
-                                <a href="#!" class="link-3">Order now</a>
+                                <a href="#!" class="btn btn-2">Order now</a>
                             </div>
                         </div>
                         <div class="img-info-3">
@@ -212,7 +212,7 @@
                                 White Wrap or Bacon, Sausage & Egg Wrap.
                             </div>
                             <div>
-                                <a href="#!" class="link-4">Order now</a>
+                                <a href="#!" class="btn btn-2">Order now</a>
                             </div>
                         </div>
                     </div>
@@ -233,7 +233,7 @@
                                 gift cards in the app.
                             </div>
                             <div>
-                                <a href="#!" class="link-5">Join now</a>
+                                <a href="#!" class="btn btn-2">Join now</a>
                             </div>
                         </div>
                         <div class="img-info-5">
@@ -260,7 +260,7 @@
                                 a.m. – 12 p.m. only. Max discount of $5.**
                             </div>
                             <div>
-                                <a href="#!" class="link-6">Order now</a>
+                                <a href="#!" class="btn">Order now</a>
                             </div>
                         </div>
                     </div>
