--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <div class="icon">
                                 <i class="fa-solid fa-location-dot"></i>
                             </div>
-                            <div class="desc">Find a store</div>
+                            <div class="desc-local">Find a store</div>
                         </div>
                         <a href="#!" class="btn-header btn1">Sign in</a>
                         <a href="#!" class="btn-header">Join now</a>
@@ -137,8 +137,8 @@
                 <div class="content">
                     <div class="block-1" id="home">
                         <div class="info">
-                            <div class="sub-title">Find your adventure</div>
-                            <div class="desc">
+                            <div class="sub-title sub-1">Find your adventure</div>
+                            <div class="desc desc-1">
                                 Starbucks® Summer Game is here! Play for your
                                 chance to win—more than 10 million prizes are up
                                 for grabs!*
@@ -162,10 +162,10 @@
                             <img src="./assets/img/hinh2.jpg" alt="" />
                         </div>
                         <div class="info-2">
-                            <div class="sub-title-2">
+                            <div class="sub-title sub-2">
                                 Macadamia just dropped
                             </div>
-                            <div class="desc-2">
+                            <div class="desc desc-2">
                                 Introducing the White Chocolate Macadamia Cream
                                 Cold Brew with toasted cookie crumbles.
                             </div>
@@ -182,8 +182,8 @@
                 <div class="content">
                     <div class="block-3">
                         <div class="info-3">
-                            <div class="sub-title-3">For your enjoy-mint</div>
-                            <div class="desc-3">
+                            <div class="sub-title sub-3">For your enjoy-mint</div>
+                            <div class="desc desc-3">
                                 Hooray for our newest cooler-than-cool Chocolate
                                 Java Mint Frappuccino® blended beverage.
                             </div>
@@ -206,8 +206,8 @@
                             <img src="./assets/img/hinh4.jpg" alt="" />
                         </div>
                         <div class="info-4">
-                            <div class="sub-title-4">Get there satisfied</div>
-                            <div class="desc-4">
+                            <div class="sub-title sub-4">Get there satisfied</div>
+                            <div class="desc desc-4">
                                 Fill up on the way with a Spinach, Feta & Egg
                                 White Wrap or Bacon, Sausage & Egg Wrap.
                             </div>
@@ -224,10 +224,10 @@
                 <div class="content">
                     <div class="block-5">
                         <div class="info-5">
-                            <div class="sub-title-5">
+                            <div class="sub-title sub-5">
                                 Gift cards give you more in the app
                             </div>
-                            <div class="desc-5">
+                            <div class="desc desc-5">
                                 It's easy to starting earning your favorites for
                                 free. Just join Starbucks Rewards and load your
                                 gift cards in the app.
@@ -251,10 +251,10 @@
                             <img src="./assets/img/hinh6.jpg" alt="" />
                         </div>
                         <div class="info-6">
-                            <div class="sub-title-6">
+                            <div class="sub-title sub-6">
                                 Delivery, from our place to yours
                             </div>
-                            <div class="desc-6">
+                            <div class="desc desc-6">
                                 Enjoy 20% off Starbucks orders with DoorDash of
                                 $15+. Offer valid 6/1-6/14 Monday – Friday, 7
                                 a.m. – 12 p.m. only. Max discount of $5.**
@@ -405,7 +405,7 @@
             <div class="separate"></div>
         </main>
 
-        <div class="footer-logo">
+        <footer class="footer-logo">
             <div class="content">
                 <div class="row-top">
                     <a href="#!" class="logo">
@@ -454,6 +454,6 @@
                     © 2023 Starbucks Coffee Company. All rights reserved.
                 </div>
             </div>
-        </div>
+        </footer>
     </body>
 </html>
