--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                     </ul>
                 </div>
 
-                <div class="desc">
+                <div class="desc-footer">
                     © 2023 Starbucks Coffee Company. All rights reserved.
                 </div>
             </div>
