--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
                 </div>
             </div>
 
+            <!-- Guides -->
             <div class="guides">
                 <div class="desc1">
                     *NO PURCHASE NECESSARY. Participating stores only. Starbucks
@@ -282,15 +283,16 @@
                     restrictions.
                 </div>
             </div>
+            
             <div class="separate"></div>
 
-            <!-- footer -->
+            <!-- Service -->
             <div class="Service">
                 <div class="content">
                     <div class="row">
                         <!-- cot 1 -->
                         <div class="column">
-                            <h3 class="sub-title">About us</h3>
+                            <h3 class="subtitle">About us</h3>
                             <ul class="list">
                                 <li>
                                     <a href="#!">Our company</a>
@@ -314,7 +316,7 @@
                         </div>
                         <!-- cot 2 -->
                         <div class="column">
-                            <h3 class="sub-title">Carees</h3>
+                            <h3 class="subtitle">Carees</h3>
                             <ul class="list">
                                 <li>
                                     <a href="#!">Culture and Values</a>
@@ -340,7 +342,7 @@
                         </div>
                         <!-- cot 3 -->
                         <div class="column">
-                            <h3 class="sub-title">Social Impact</h3>
+                            <h3 class="subtitle">Social Impact</h3>
                             <ul class="list">
                                 <li>
                                     <a href="#!">People</a>
@@ -358,7 +360,7 @@
                         </div>
                         <!-- cot 4 -->
                         <div class="column">
-                            <h3 class="sub-title">For Business Partners</h3>
+                            <h3 class="subtitle">For Business Partners</h3>
                             <ul class="list">
                                 <li>
                                     <a href="#!">Landlord Support Center</a>
@@ -378,7 +380,7 @@
                         </div>
                         <!-- cot 5 -->
                         <div class="column">
-                            <h3 class="sub-title">Order and Pick up</h3>
+                            <h3 class="subtitle">Order and Pick up</h3>
                             <ul class="list">
                                 <li>
                                     <a href="#!">Order on the App</a>
@@ -402,6 +404,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="separate"></div>
         </main>
 
